--- a/structure/sass/tkgreen/elements/_faq.scss
+++ b/structure/sass/tkgreen/elements/_faq.scss
@@ -8,6 +8,8 @@ details {
  border-radius: $br;
  position     : relative;
 
+
+
  .summary-title {
   user-select: none;
   font-weight: $fw-b;
@@ -40,16 +42,20 @@ details {
  }
 
  .summary-chevron-up svg {
-  opacity: 0.5;
+  opacity: 1;
  }
 
  .summary-chevron-up,
  .summary-chevron-down {
   pointer-events: none;
   position      : absolute;
-  top           : 0.75em;
-  right         : $spacer;
+  top           : 0.5em;
+  right         : .25em;
   background    : neutral(1);
+  font-weight: 900;
+ 
+  color: color(primary-dark);
+  color: color(accent);
 
   svg {
    display: block;
